I messed a bunch of things up trying to fix Rack Flash in this program. No one on stack overflow seems to get the problem either, but it seemed to me to be one of message vs error vs notice... this after trying to get an error message about a hundred times, checking the code, using terminal to puts, and then rackup, and nothing. Finally, I reset everything, and changed all the error messages to message in the hash and I got some error messages to appear. Still don't get why, if one is only using a few error messages whould anyone use this gem. It seems to kind of stink for Sinatra, or maybe I stink, but I'm at wit's end on this one.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -867,7 +867,20 @@ top: 179px;
     font-family: Audiowide;
     z-index: 4;
   }
-
+#flash {
+  position:fixed;
+    left:240px;
+    top:400px;
+    width:680px;
+    height:20px;
+    font-size: 12px;
+    font-style:italic;
+    letter-spacing: 3px;
+    background-color: transparent;
+    color: #a3e0fb;
+    font-family: Audiowide;
+    z-index: 4;
+}
 
   
 
